[project]
name = "optional_objectives_reward"
version = "1.0"
authors = [{ name = "Sergio Almela" }]
description = """\
Automatically rewards ALL optional objectives in Borderlands 2 and The Pre-Sequel.
Rewards scale with playthrough difficulty (Normal/TVHM/UVHM).
"""

[project.urls]
Repository = "https://github.com/sergioalmela/Sergio-Borderlands-SDK-Mods/tree/main/optional-objectives-reward"
Changelog = "https://github.com/sergioalmela/Sergio-Borderlands-SDK-Mods/blob/main/optional-objectives-reward/README.md"

[tool.sdkmod]
name = "Optional Objectives Rewards"
license = { name = "MIT", url = "https://opensource.org/licenses/MIT" }
coop_support = "HostOnly"
download = "https://github.com/sergioalmela/Sergio-Borderlands-SDK-Mods/releases/latest/download/optional_objectives_reward.sdkmod"
supported_games = ["BL2", "TPS"]
